--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "demo",
   "version": "1.0.0",
@@ -20,8 +19,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.5",
     "pg": "^8.13.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
